# informator

./: README.md  gitignore
sdk/: .gitignore  CCgosHandler.pri  CConsoleLogger.pri  CDatabaseHandler.pri  CErrorMessageParser.pri  CFormalizedMessage.pri  CKeepAliveHandler.pri  CLoggerHandler.pri  CLoggerMessage.pri  CMainHandler.pri  CMakeLists.txt  CMqttHandler.pri  CMqttTopics.pri  CSerialDetector.pri  CSettings.pri  CSettingsHandler.pri  CUtils.pri  Mqtt.pri  README.md  Vehicle.pri  app.pri  common_sdk.cmake  common_sdk.pri  misc.pri  mnt_defs.pri  prk_app_compile.pri  prk_app_project.pri  prk_app_sdk.pri  prk_app_stack_trace.pri  prk_paths.pri  prk_sdk_version.pri  sdk.h  sdk.pro  setup_application.cmake  version_history.txt
sdk/CCgosHandler/: AmpliferManager.cpp  AmpliferManager.h  CCgosHandler.cpp  CCgosHandler.h
sdk/CConsoleLogger/: CConsoleLogger.cpp  CConsoleLogger.h
sdk/CDatabaseHandler/: CApplicationSettings.cpp  CApplicationSettings.h  CDatabaseConnectionSettings.cpp  CDatabaseConnectionSettings.h  CDatabaseHandler.cpp  CDatabaseHandler.h  DatabaseContent.h
sdk/CErrorMessageParser/: CErrorMessageParser.cpp  CErrorMessageParser.h
sdk/CFormalizedMessage/: CFormalizedMessage.cpp  CFormalizedMessage.h
sdk/CKeepAliveHandler/: CKeepAliveHandler.cpp  CKeepAliveHandler.h  CKeepAliveTopicMessage.cpp  CKeepAliveTopicMessage.h
sdk/CLoggerHandler/: CLoggerHandler.cpp  CLoggerHandler.h
sdk/CLoggerMessage/: CGuiMessage.cpp  CGuiMessage.h  CLoggerMessage.cpp  CLoggerMessage.h  CMessage.cpp  CMessage.h
sdk/CMainHandler/: CAbstractController.cpp  (+5 more)
(+488 files in other folders)
